Fix issue with bootstrap mobile hamburger navbar not showing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,17 @@ a span {
   text-align: center;
 }
 
+.flash {
+  display: inline-block;
+  background: #f9f8ea;
+}
+
+.flash-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 // Header styles
 
 .header-container {
@@ -115,6 +126,12 @@ a span {
 
 // Navbar Styles
 
+@media only screen and (max-width: 480px) {
+  .hidden-xs-hover {
+    visibility: hidden;
+  }
+}
+
 // Home Page Styles
 
 .welcome-sub-header {
@@ -133,12 +150,14 @@ a span {
 // UL to cards
 
 .products {
-  padding: 2rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
+  // grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
+  grid-template-columns: repeat(3, minmax(auto, 1fr));
+  grid-gap: 10px;
   align-items: center;
   justify-content: center;
+  // min-width: 375px;
+  // min-height: 415px;
   
   & > h2 {
     grid-column: 1 / -1;
@@ -157,18 +176,19 @@ a span {
 }
 
 .card {
+  // position: relative;
+  padding: 10px;
   width: 375px;
   height: 415px;
   background-color: white;
-  padding: 0.5% 0% 0% 0%;
+  padding: 0% 0% 0% 0%;
   padding-bottom: 1px;
   border-radius: 5px;
   border: 1.5px solid #CBCBCB;
   border-top: 3px solid #419234;
   text-align: center;
-  float: left;
-  margin-bottom: 4%;
-  margin-right: 4%;
+  overflow: hidden;
+  // min-width: none;
 }
 
 .card-image {
@@ -177,12 +197,6 @@ a span {
   width: 373px;
   height: 100%;
   object-fit: cover;
-  // // display: block;
-  // margin-left: auto;
-  // margin-right: auto;
-  // min-width: 400px;
-  // width: 100%;
-  // height: 400px;
 }
 
 .card-image-not-found {
@@ -191,13 +205,6 @@ a span {
   display: block;
   margin-left: auto;
   margin-right: auto;
-
-  // display: block;
-  // margin-left: auto;
-  // margin-right: auto;
-  // min-width: 400px;
-  // width: 100%;
-  // height: 400px;
 }
 
 // Product Page Styles
